fix: Detail header overflow

--- a/app/javascript/modules/listingDetails/ListingDetailsEligibility.scss
+++ b/app/javascript/modules/listingDetails/ListingDetailsEligibility.scss
@@ -1,3 +1,12 @@
 .info-card{
     --title-color:var(--bloom-color-gray-950);
 }
+
+.detail-header {
+    min-height: var(--bloom-s20);
+    .detail-header__hgroup {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
